fix: linux video codec load stuck by using images instead of viceos

--- a/src/assets/default-project/en/styles.css
+++ b/src/assets/default-project/en/styles.css
@@ -158,12 +158,6 @@ h1 {
     }
 }
 
-.video-slider {
-    width: 100%;
-    height: 15em;
-    position: relative;
-    overflow: hidden;
-}
 .video {
     height: 100%;
     width: 100%;
